--- a/src/components/JurisdictionSelector/JurisdictionSelector.css
+++ b/src/components/JurisdictionSelector/JurisdictionSelector.css
@@ -1,14 +1,20 @@
-/* Archivo JurisdictionSelector.css */
 
 .main-jurisdictions{
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-family: sans-serif;
 }
 
 .jurisdiction-list{
+    display: flex;
     list-style-type: none !important;
     margin-left: -25px;
+}
+
+.subjurisdiction-list{
+    list-style-type: none !important;
+    margin-left: -10px;
 }
 
 .jurisdiction-label{
